--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,10 +21,11 @@ dependencies:
   file_picker: ^5.5.0  # Versione aggiornata
   collection: ^1.17.0  # Aggiunto esplicitamente
   path_provider: ^2.1.5
-  flutter_pdfview: ^1.3.2
+  #flutter_pdfview: ^1.3.2
   webview_flutter: ^4.7.0
   open_file: ^3.3.2
   path: ^1.8.3
+  pdfx: ^2.9.2
 
 dev_dependencies:
   flutter_test:
