--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,3 @@
-
 name: Publish
 
 on:
@@ -7,7 +6,7 @@ on:
 jobs:
   android:
     name: "Publish Android"
-    runs-on: "ubuntu-latest"
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2
@@ -18,61 +17,82 @@ jobs:
           distribution: 'zulu'
           java-version: '11'
       - run: flutter pub get
-      - run: flutter build apk
-      - run: flutter build appbundle
+      - run: flutter build apk --release
+      - run: flutter build appbundle --release
       - uses: actions/upload-artifact@v3
         with:
-          name: android
+          name: android-apk
           path: build/app/outputs/flutter-apk/app-release.apk
       - uses: actions/upload-artifact@v3
         with:
-          name: android_bundle
+          name: android-aab
           path: build/app/outputs/bundle/release/app.aab
-
-  web:
-    runs-on: "ubuntu-latest"
-    name: "Publish Web"
-    steps:
-      - uses: actions/checkout@v3
-      - uses: subosito/flutter-action@v2
-        with:
-          channel: 'stable'
-      - run: flutter pub get
-      - run: flutter build web
-      - uses: actions/upload-artifact@v3
-        with:
-          name: web
-          path: build/web/
-
   linux:
     name: "Publish Linux"
-    runs-on: "ubuntu-latest"
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-      - run: sudo apt-get update -y && sudo apt-get install -y ninja-build libgtk-3-dev
+      - run: sudo apt-get update -y && sudo apt-get install -y ninja-build libgtk-3-dev dpkg-dev
       - run: flutter config --enable-linux-desktop
       - run: flutter pub get
-      - run: flutter build linux
+      - run: flutter build linux --release
+      # Crea il pacchetto .deb
+      - name: Create DEB package
+        run: |
+          mkdir -p dist/usr/local/bin
+          cp build/linux/x64/release/bundle/* dist/usr/local/bin/
+          mkdir -p dist/DEBIAN
+          echo "Package: s3gui Version: 1.0.0 Section: base Priority: optional Architecture: amd64 Depends: libgtk-3-0 Maintainer: Your Name <your@email.com> Description: S3 GUI client built with Flutter." > dist/DEBIAN/control Maintainer: APXC"
       - uses: actions/upload-artifact@v3
         with:
-          name: linux_x64
+          name: linux-deb
+          path: s3gui.deb
+      - uses: actions/upload-artifact@v3
+        with:
+          name: linux-x64
           path: build/linux/x64/release/bundle/
 
   windows:
-    runs-on: windows-latest
     name: "Publish Windows"
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2
         with:
-          channel: 'beta'
+          channel: 'stable'
       - run: flutter config --enable-windows-desktop
       - run: flutter pub get
-      - run: flutter build windows
+      - run: flutter build windows --release
       - uses: actions/upload-artifact@v3
         with:
-          name: windows_64
+          name: windows-x64
           path: build/windows/runner/Release/
+
+  macos:
+    name: "Publish macOS"
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+      - run: flutter config --enable-macos-desktop
+      - run: flutter pub get
+      - run: flutter build macos --release
+      # Installa create-dmg
+      - run: brew install create-dmg
+      # Crea il file DMG
+      - name: Create DMG
+        run: |
+          create-dmg s3gui.dmg build/macos/Build/Products/Release/Runner.app
+      - uses: actions/upload-artifact@v3
+        with:
+          name: macos-dmg
+          path: s3gui.dmg
+      - uses: actions/upload-artifact@v3
+        with:
+          name: macos-x64
+          path: build/macos/Build/Products/Release/Runner.app
