--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,7 +35,7 @@ jobs:
       - uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-      - run: sudo apt-get update -y && sudo apt-get install -y ninja-build libgtk-3-dev dpkg-dev
+      - run: sudo apt-get update -y && sudo apt-get install -y ninja-build libgtk-3-dev dpkg-dev libsecret-1-dev
       - run: flutter config --enable-linux-desktop
       - run: flutter pub get
       - run: flutter build linux --release
@@ -81,7 +81,7 @@ jobs:
           channel: 'stable'
       - run: flutter config --enable-macos-desktop
       - run: flutter pub get
-      - run: flutter build macos --release
+      - run: flutter build macos --release --no-codesign
       # Installa create-dmg
       - run: brew install create-dmg
       # Crea il file DMG
