--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -45,7 +45,7 @@ jobs:
           mkdir -p dist/usr/local/bin
           cp -r build/linux/x64/release/bundle/* dist/usr/local/bin/
           mkdir -p dist/DEBIAN
-          echo "Package: s3gui Version: 1.0.0 Section: base Priority: optional Architecture: amd64 Depends: libgtk-3-0 Maintainer: Your Name <your@email.com> Description: S3 GUI client built with Flutter." > dist/DEBIAN/control Maintainer: APXC"
+          echo 'Package: s3gui Version: 1.0.0 Section: base Priority: optional Architecture: amd64 Depends: libgtk-3-0 Maintainer: Your Name <your@email.com> Description: S3 GUI client built with Flutter." > dist/DEBIAN/control Maintainer: APXC'
       - uses: actions/upload-artifact@v4
         with:
           name: linux-deb
@@ -71,29 +71,29 @@ jobs:
           name: windows-x64
           path: build/windows/runner/Release/
 
-  macos:
-    name: "Publish macOS"
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: subosito/flutter-action@v2
-        with:
-          channel: 'stable'
-      - run: flutter config --enable-macos-desktop
-      - run: flutter pub get
-      - run: flutter build macos --release
-      - run: xcodebuild -workspace macos/Runner.xcworkspace -scheme Runner -configuration Release -allowProvisioningUpdates
-      # Installa create-dmg
-      - run: brew install create-dmg
-      # Crea il file DMG
-      - name: Create DMG
-        run: |
-          create-dmg s3gui.dmg build/macos/Build/Products/Release/Runner.app
-      - uses: actions/upload-artifact@v4
-        with:
-          name: macos-dmg
-          path: s3gui.dmg
-      - uses: actions/upload-artifact@v4
-        with:
-          name: macos-x64
-          path: build/macos/Build/Products/Release/Runner.app
+  # macos:
+  #   name: "Publish macOS"
+  #   runs-on: macos-latest
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: subosito/flutter-action@v2
+  #       with:
+  #         channel: 'stable'
+  #     - run: flutter config --enable-macos-desktop
+  #     - run: flutter pub get
+  #     - run: flutter build macos --release
+  #     - run: xcodebuild -workspace macos/Runner.xcworkspace -scheme Runner -configuration Release -allowProvisioningUpdates
+  #     # Installa create-dmg
+  #     - run: brew install create-dmg
+  #     # Crea il file DMG
+  #     - name: Create DMG
+  #       run: |
+  #         create-dmg s3gui.dmg build/macos/Build/Products/Release/Runner.app
+  #     - uses: actions/upload-artifact@v4
+  #       with:
+  #         name: macos-dmg
+  #         path: s3gui.dmg
+  #     - uses: actions/upload-artifact@v4
+  #       with:
+  #         name: macos-x64
+  #         path: build/macos/Build/Products/Release/Runner.app
