--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,11 @@
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        google()
+        mavenCentral()
+    }
+}
+
 buildscript {
     ext.kotlin_version = '1.6.10'
     repositories {
