--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -66,10 +66,13 @@ jobs:
       - run: flutter config --enable-windows-desktop
       - run: flutter pub get
       - run: flutter build windows --release
+      - name: Create ZIP
+        run: Compress-Archive -Path build/windows/runner/Release/* -DestinationPath s3gui-windows.zip
+      
       - uses: actions/upload-artifact@v4
         with:
           name: windows-x64
-          path: build/windows/runner/Release/
+          path: s3gui-windows.zip
 
   # macos:
   #   name: "Publish macOS"
